# ticket-chain

./: Dockerfile  LICENSE  stack.yaml  ticket-chain.cabal
prog/: Wallet.hs
src/: TicketChain.hs
tests/: TicketChainSpec.hs  TicketChainTests.hs
