name: ticket-chain
version: 0.0.1
synopsis: The event ticket chain
description: The event ticket chain
homepage: https://github.com/ironchicken/ticket-chain/
license: BSD3
license-file: LICENSE
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
copyright: Copyright (C) 2017 Richard Lewis
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  build-depends: base >=4.9 && <4.10
               , bytestring >= 0.10.8.2 && < 0.11
               , cereal >= 0.5.4 && < 0.6
               , cryptonite >= 0.24 && < 0.25
               , time >= 1.6.0.1 && < 1.9
               , tls >= 1.4.0 && < 1.5
  exposed-modules: TicketChain
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2

executable ticket-wallet
  main-is: Wallet.hs
  build-depends: base >=4.9 && <4.10
               , ticket-chain
  hs-source-dirs: prog
  default-language: Haskell2010
  ghc-options: -threaded -O2

test-suite chain-spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base >=4.9 && <4.10
               , Cabal >= 1.24 && < 1.25
               , hspec >= 2.4 && < 2.5
               , ticket-chain
               , time >= 1.6.0.1 && < 1.9
  hs-source-dirs: tests
  default-language: Haskell2010
