name: ticket-chain
version: 0.0.1
synopsis: The event ticket chain
description: The event ticket chain
homepage: https://github.com/ironchicken/ticket-chain/
license: BSD3
license-file: LICENSE
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
copyright: Copyright (C) 2017 Richard Lewis
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  build-depends: base >=4.9 && <4.10
               , binary >= 0.8.5.1 && < 0.8.6
               , bytestring >= 0.10.8 && < 0.11
               , cryptonite >= 0.24 && < 0.25
               , distributed-process >= 0.7.3 && < 0.8
               , distributed-process-p2p >= 0.1.3.2 && < 0.1.4
               , network >= 2.6.3.2 && < 2.6.4
               , network-transport-tcp <= 0.5.1
               , time >= 1.6.0.1 && < 1.9
               , tls >= 1.4.0 && < 1.5
  exposed-modules: TicketChain
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2

executable ticket-wallet
  main-is: Wallet.hs
  build-depends: base >=4.9 && <4.10
               , ticket-chain
  hs-source-dirs: prog
  default-language: Haskell2010
  ghc-options: -threaded -O2

test-suite chain-spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base >=4.9 && <4.10
               , bytestring >= 0.10.8 && < 0.11
               , Cabal >= 1.24 && < 1.25
               , hspec >= 2.4 && < 2.5
               , HUnit >= 1.6.0.0 && < 1.7
               , network >= 2.6.3.2 && < 2.6.4
               , ticket-chain
               , time >= 1.6.0.1 && < 1.9
  hs-source-dirs: tests
  default-language: Haskell2010
