name: ticket-chain
version: 0.0.1
synopsis: The event ticket chain
description: The event ticket chain
homepage: https://github.com/ironchicken/ticket-chain/
license: BSD3
license-file: LICENSE
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
copyright: Copyright (C) 2017 Richard Lewis
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  build-depends: base
               , binary
               , bytestring
               , cryptonite
               , distributed-process
               , distributed-process-p2p
               , network
               , network-transport-tcp
               , time
               , tls
  exposed-modules: TicketChain
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2

executable ticket-wallet
  main-is: Wallet.hs
  build-depends: base
               , ticket-chain
  hs-source-dirs: prog
  default-language: Haskell2010
  ghc-options: -threaded -O2

test-suite chain-spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base
               , bytestring
               , Cabal
               , hspec
               , HUnit
               , network
               , ticket-chain
               , time
  hs-source-dirs: tests
  default-language: Haskell2010
